--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -62,7 +62,7 @@
 
     <div class="uk-grid uk-margin-large-bottom" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating()" style="line-height: 120px;"><div style="font-size: 500%">Rate</div></a>
+            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating(group.id+"")" style="line-height: 120px;"><div style="font-size: 500%">Rate</div></a>
         </div>
     </div>
 
