--- a/app/views/edit_description.scala.html
+++ b/app/views/edit_description.scala.html
@@ -19,15 +19,15 @@
                             <div class="uk-text-center">
                                 <div class="uk-grid uk-grid-small uk-margin-small-top">
                                     <div class="uk-panel uk-width-5-10">
-                                        <a href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 20px ;">
-                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">
-                                                Upload Team Logo</div>
+                                        <a href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
+                                                Logo</div>
                                         </a>
                                     </div>
                                     <div class="uk-panel uk-width-5-10">
-                                        <a href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 20px ;">
-                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">
-                                                Upload Screenshot</div>
+                                        <a href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
+                                                Screenshot</div>
                                         </a>
                                     </div>
                                 </div>
