edit "edit description page" UI

--- a/app/views/edit_description.scala.html
+++ b/app/views/edit_description.scala.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="uk-grid uk-grid-small uk-margin-small-top" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-small uk-margin-small-top uk-margin-large-bottom" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.mainMenu">Cancel</a>
             </div>
