rating page redirect to team list page

--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -112,7 +112,7 @@
 
             $.post ( "/rating2" , obj , function( data ){});
             console.log(obj);
-            window.location.replace ( "@routes.Application.rating(uid)" );
+            window.location.replace ( "@routes.Application.teamList()" );
             }
             </script>
 }
