--- a/app/views/rating_result.scala.html
+++ b/app/views/rating_result.scala.html
@@ -8,7 +8,7 @@
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0;">
-                <b>Vote Result</b>
+                <b>Rating Result</b>
             </div>
         </div>
     </div>
