--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -2,7 +2,7 @@
 
 @main("Register")(css) {
     @*<h1>Register</h1>*@
-    @helper.form(routes.Application.enroll) {
+    @helper.form(routes.Application.regis()) {
 
         <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
@@ -82,8 +82,6 @@
         </div>
 
     }
-
-
 }
 
 @css = {
