--- a/app/views/edit_description.scala.html
+++ b/app/views/edit_description.scala.html
@@ -1,4 +1,5 @@
-@(form: Form[forms.EditDescription])(name: String)
+@(form: Form[forms.EditDescription])(name: String)(uploadLogo: Boolean)(uploadScreenshot: Boolean)
+@import forms.UploadScreenshot
 @main("Edit team description")(css) {
     @helper.form(routes.Application.editDescription) {
 
@@ -19,14 +20,14 @@
                             <div class="uk-text-center">
                                 <div class="uk-grid uk-grid-small uk-margin-small-top">
                                     <div class="uk-panel uk-width-5-10">
-                                        <a href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 12px ;">
-                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
+                                        <a id='link_logo' href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                            <div id='text_logo' class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
                                                 Logo</div>
                                         </a>
                                     </div>
                                     <div class="uk-panel uk-width-5-10">
-                                        <a href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 12px ;">
-                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
+                                        <a id='link_screenshot' href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                            <div id='text_screenshot' class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
                                                 Screenshot</div>
                                         </a>
                                     </div>
@@ -57,6 +58,25 @@
             </div>
         </div>
     }
+
+    <script>
+        if (!@uploadLogo){
+            $('#link_logo').click(function(){
+                return false;
+            });
+            $('#text_logo').text("Logo (Disable)");
+        }
+
+
+        if (!@uploadScreenshot){
+            $('#link_screenshot').click(function(){
+                return false;
+            });
+            $('#text_screenshot').text("Screenshot (Disable)");
+        }
+
+
+    </script>
 }
 @css = {
 
