--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -1,4 +1,4 @@
-@(group: Team)(members: List[Account])(screenshots: List[Screenshot])
+@(group: Team)(members: List[Account])(screenshots: List[Screenshot])(rating: Boolean)
 
 @main("Team Description")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
@@ -62,10 +62,19 @@
 
     <div class="uk-grid uk-margin-large-bottom" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating(group.id+"")" style="line-height: 120px;"><div style="font-size: 500%">Rate</div></a>
+            <a id='link_rating' class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating(group.id+"")" style="line-height: 120px;">
+                <div id='text_rating' style="font-size: 500%">Rate</div></a>
         </div>
     </div>
+    <script>
+        if (!@rating){
+         $('#link_rating').click(function(){
+            return false;
+         });
+         $('#text_rating').text($('#text_rating').text() + ' (Disable)');
+        }
 
+    </script>
 }
 @css = {
 
