--- a/app/views/admin_setting.scala.html
+++ b/app/views/admin_setting.scala.html
@@ -17,7 +17,8 @@
                 <br>
       }
       }
-      
+
+      <a class="uk-button" href="@routes.Admin.home()">Back</a>
       <button class="uk-button" onclick="sent()">Save</button>
     </fieldset>
 
@@ -33,7 +34,7 @@
     }
     $.post( "@routes.Admin.setting()", data)
      .done(function( data ) {
-
+        UIkit.notify("Saved", {status:'success', timeout : 5000})
       });
 
     }
@@ -43,5 +44,7 @@
 }
 
 @css = {
+  <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/notify.almost-flat.min.css")">
+  <script src="@routes.Assets.at("uikit-2.17.0/js/components/notify.min.js")" type="text/javascript"></script>
 
 }
