edit "add criteria function"

--- a/app/views/admin_home.scala.html
+++ b/app/views/admin_home.scala.html
@@ -5,6 +5,7 @@
     <div class="uk-panel uk-panel-box">
         <h3 class="uk-panel-title">Admin setting</h3>
         <ul class="uk-nav uk-nav-side">
+            <li><a href="@routes.Admin.addCriteria()">Criteria</a></li>
             <li><a href="@routes.Admin.setting()">On/Off Feature</a></li>
             <li><a onclick="setupFeatures()">Setup Features And Reset</a></li>
         </ul>
