--- a/app/views/admin_add_criteria.scala.html
+++ b/app/views/admin_add_criteria.scala.html
@@ -15,12 +15,6 @@
                         </ul>
                     </fieldset>
 
-                    @if(form.hasErrors) {
-                        <script>
-                        UIkit.notify("@form.globalError.message", {status:'danger', timeout : 5000});
-                        </script>
-                    }
-
                     <form id="form" action="@routes.Admin.addCriteria()" method="post" class="uk-form uk-margin-top">
                         <fieldset data-uk-margin>
                             <input name="name" type="text" placeholder="Criteria">
@@ -32,6 +26,16 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $('#form').submit(function( event ) {
+            event.preventDefault();
+            $.post('@routes.Admin.addCriteria()', $( this ).serialize() ).
+            done(function(data){
+                UIkit.notify(data, {status:'danger', timeout : 5000});
+            });
+            });
+    </script>
 
 }
 
