add No Vote button & add Secured class

--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -68,6 +68,10 @@
                                                 </span>
                                                 <span class="ir">1</span>
                                             </label>
+
+                                        </div>
+                                        <div class="form-action">
+                                            <input class="btn-reset" type="reset" value="No Vote" />
                                         </div>
                                     </fieldset>
                                 </form>
