--- a/public/materialize/css/rate.css
+++ b/public/materialize/css/rate.css
@@ -181,7 +181,7 @@ body {
 
 /* RATING - Form - Action */
 .rating-form .form-action {
-    opacity: 0;
+    /*opacity: 0;*/
     position: absolute;
     left: 5px; bottom: 10px;
 .transition();
@@ -199,7 +199,7 @@ body {
     border: 0;
     font-size: 10px; font-size: 1rem;
     background: #fff;
-    color: #333;
+    color: #000000;
     cursor: auto;
     border-radius: 5px;
     outline: 0;
