add "list criteria function"

--- a/app/views/admin_add_criteria.scala.html
+++ b/app/views/admin_add_criteria.scala.html
@@ -8,10 +8,10 @@
                 <div class="uk-form">
                     <fieldset data-uk-margin>
                         <legend class="uk-margin-bottom-remove">Criteria</legend>
-                        <ul class="uk-tab" data-uk-tab>
+                        <ul class="uk-tab">
                             <li class="uk-active"><a href="@routes.Admin.addCriteria()">Add</a></li>
-                            <li><a href="">Remove</a></li>
-                            <li><a href="">List</a></li>
+                            <li><a href="">Delete</a></li>
+                            <li><a href="@routes.Admin.listCriteria()">List</a></li>
                         </ul>
                     </fieldset>
 
