--- a/app/views/rating_result.scala.html
+++ b/app/views/rating_result.scala.html
@@ -1,5 +1,5 @@
-
-@(rankAll: List[Stuff])
+@import java.util.Map.Entry;
+@(rankAll: List[Stuff])(rankOverAll: List[Entry[Team, Double]])
 
 @main("Group List")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
@@ -18,10 +18,10 @@
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <div class="panel panel-default border-zero-width" >
-                    <div class="panel-heading border-zero-width" style="background-color : #D35400">
+                    <div class="panel-heading border-zero-width" style="background-color : #2980b9">
                         <h3 class="panel-title ui-text-white"><b>@stuff.getType().name</b></h3>
                     </div>
-                    <div class="panel-body border-zero-width" style="background-color : #E67E22">
+                    <div class="panel-body border-zero-width" style="background-color : #3498db">
                         <ol class="ui-text-white">
                         @stuff.getRank().map { nameList =>
                             <li>@nameList.getKey.name  @nameList.getValue</li>
@@ -32,6 +32,23 @@
             </div>
         </div>
     }
+
+    <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-width-9-10 uk-container-center">
+            <div class="panel panel-default border-zero-width" >
+                <div class="panel-heading border-zero-width" style="background-color : #27ae60">
+                    <h3 class="panel-title ui-text-white"><b>OverAll Ranking</b></h3>
+                </div>
+                <div class="panel-body border-zero-width" style="background-color : #2ecc71">
+                    <ol class="ui-text-white">
+                    @rankOverAll.map { list =>
+                        <li>@list.getKey.name  @list.getValue</li>
+                    }
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
 }
 @css = {
 
