--- a/app/views/admin_home.scala.html
+++ b/app/views/admin_home.scala.html
@@ -7,6 +7,7 @@
         <ul class="uk-nav uk-nav-side">
             <li><a href="@routes.Admin.addCriteria()">Criteria</a></li>
             <li><a href="@routes.Admin.setting()">On/Off Feature</a></li>
+            <li><a href="@routes.Admin.listTeam()">Team</a></li>
             <li><a onclick="setupFeatures()">Setup Features And Reset</a></li>
         </ul>
     </div>
