--- a/app/views/admin/list_team.scala.html
+++ b/app/views/admin/list_team.scala.html
@@ -10,9 +10,9 @@
                     <fieldset data-uk-margin>
                         <legend class="uk-margin-bottom-remove">Team</legend>
                         <ul class="uk-tab">
-                            <li class="uk-active"><a href="@routes.Admin.listTeam()">List</a></li>
+                            <li class="uk-active"><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
                             <li><a href="">Edit</a></li>
-                            <li><a href="@routes.Admin.deleteTeam()">Delete</a></li>
+                            <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
                         </ul>
                     </fieldset>
