--- a/app/views/admin/setting.scala.html
+++ b/app/views/admin/setting.scala.html
@@ -18,7 +18,7 @@
       }
       }
 
-      <a class="uk-button" href="@routes.Admin.home()">Back</a>
+      <a class="uk-button" href="@controllers.admin.routes.Menu.menu()">Back</a>
       <button class="uk-button" onclick="sent()">Save</button>
     </fieldset>
 
@@ -32,7 +32,7 @@
     @list.map{ setting =>
         data[@setting.id] = $('input[name=@setting.id]').prop('checked');
     }
-    $.post( "@routes.Admin.setting()", data)
+    $.post( "@controllers.admin.routes.Setup.setupFeatures()", data)
      .done(function( data ) {
         UIkit.notify("Saved", {status:'success', timeout : 5000})
       });
@@ -46,5 +46,4 @@
 @css = {
   <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/notify.almost-flat.min.css")">
   <script src="@routes.Assets.at("uikit-2.17.0/js/components/notify.min.js")" type="text/javascript"></script>
-
 }
