--- a/app/views/user/edit_description.scala.html
+++ b/app/views/user/edit_description.scala.html
@@ -1,7 +1,6 @@
 @(form: Form[forms.EditDescription])(name: String)(uploadLogo: Boolean)(uploadScreenshot: Boolean)
-@import forms.UploadScreenshot
 @main("Edit team description")(css) {
-    @helper.form(routes.Application.editDescription) {
+    <form action="@controllers.user.routes.Team.editDescription()" method="get">
 
         <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
@@ -16,25 +15,22 @@
                                 @form.globalError.message
                                 </div>
                             }
-
                             <div class="uk-text-center">
                                 <div class="uk-grid uk-grid-small uk-margin-small-top">
                                     <div class="uk-panel uk-width-5-10">
-                                        <a id='link_logo' href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                        <a id='link_logo' href="@controllers.user.routes.Upload.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100% ; font-size : 500% ; padding : 12px ;">
                                             <div id='text_logo' class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
                                                 Logo</div>
                                         </a>
                                     </div>
                                     <div class="uk-panel uk-width-5-10">
-                                        <a id='link_screenshot' href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 12px ;">
+                                        <a id='link_screenshot' href="@controllers.user.routes.Upload.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100% ; font-size : 500% ; padding : 12px ;">
                                             <div id='text_screenshot' class="uk-text-bottom" style="color : #ffffff ; font-size : 20% ; font-family : 'Signika', sans-serif ;">
                                                 Screenshot</div>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-
-                            @*<input name="content" type="text" placeholder="write here" class="uk-width-1-1" value="@form.data.get("content")">*@
                             <div class="uk-form-row">
                                 <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here"></textarea>
 
@@ -54,10 +50,10 @@
 
         <div class="uk-grid uk-grid-small uk-margin-small-top uk-margin-large-bottom" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.mainMenu">Cancel</a>
+                <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Menu.mainMenu">Cancel</a>
             </div>
         </div>
-    }
+    </form>
 
     <script>
         if (!@uploadLogo){
