--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -6,6 +6,7 @@
             <h1 class="uk-display-inline-block" style="color: #ffffff">Exceed Vote</h1>
         </div>
     </div>
+    <form action="@controllers.user.routes.Account.login()" method="post">
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             @if(form.hasGlobalErrors) {
@@ -13,7 +14,6 @@
                 @form.globalError.message
                 </div>
             }
-            @helper.form(routes.Application.login()) {
                 <div class="uk-panel uk-panel-box">
 
                     <div class="form-group">
@@ -25,15 +25,17 @@
                         <input class="form-control uk-margin-small-bottom" type="password" name="password">
                     </div>
                 </div>
-            </div>
+
+        </div>
     </div>
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <button class="uk-button uk-button-primary uk-button-large uk-width-1-1" type="submit">Login</button> </div>
     </div>
+
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a id='link_register' class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.regis">
+            <a id='link_register' class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Account.regis()">
                 <div id='text_register'>Register</div>
             </a>
         </div>
@@ -41,12 +43,12 @@
 
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a id='link_create_team' class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.createTeam">
+            <a id='link_create_team' class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Team.createTeam">
                 <div id='text_create_team'>Create a team</div>
             </a>
         </div>
     </div>
-}
+    </form>
     <script>
         if (!@createAccount){
          $('#link_register').click(function(){
