--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -3,7 +3,7 @@
 @main("Team Description")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
         <div class="uk-panel uk-width-1-6">
-            <a href="@routes.Application.teamList()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height : 60px;font-size: large;"></a>
+            <a href="@controllers.user.routes.Team.teamList()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height : 60px;font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="height : 60px; border-width: 0;font-size: large;">
@@ -62,7 +62,7 @@
 
     <div class="uk-grid uk-margin-large-bottom" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a id='link_rating' class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@routes.Application.rating(group.id+"")" style="line-height: 120px;">
+            <a id='link_rating' class="uk-button uk-button-large uk-width-1-1 ui-eucalyptus ui-text-white ui-button" href="@controllers.user.routes.Rating.rating(group.id+ "")" style="line-height: 120px;">
                 <div id='text_rating' style="font-size: 500%">Rate</div></a>
         </div>
     </div>
