--- a/app/views/user/upload_logo.scala.html
+++ b/app/views/user/upload_logo.scala.html
@@ -1,13 +1,10 @@
 @(form: Form[forms.UploadLogo])(name: String)
 @main("Upload team logo")(css) {
 <form id="data" method='POST' enctype='multipart/form-data'>
-
     <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-
             <div class="uk-panel uk-panel-box">
                 <div class="uk-form">
-
                     <fieldset data-uk-margin>
                         <legend>Upload @name logo</legend>
                         @if(form.hasGlobalErrors) {
@@ -16,7 +13,6 @@
                         </div>
                     }
                 </fieldset>
-
 
                 <a class="uk-form-file uk-button uk-button-primary uk-button-large uk-icon-cloud-upload uk-width-1-1 ui-button" style="font-size: 500%; padding: 20px;">
                     <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">
@@ -36,7 +32,7 @@
 </div>
 <div class="uk-grid uk-grid-small uk-margin-top" data-uk-grid-margin>
     <div class="uk-width-9-10 uk-container-center">
-        <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.editDescription()">Cancel</a>
+        <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.Team.editDescription()">Cancel</a>
     </div>
 </div></form>
 
@@ -77,9 +73,9 @@
         }, 250 ) ;
         var obj = jQuery.parseJSON ( response ) ;
         $.post (
-            " @routes.Application.uploadLogo() ", { url : obj.url } )
+            " @controllers.user.routes.Upload.uploadLogo() ", { url : obj.url } )
         .done ( function ( data ) {
-window.location.replace ( "  @routes.Application.editDescription() ");
+window.location.replace ( "  @controllers.user.routes.Team.editDescription() ");
         } )
     }
 } ;
