--- a/app/views/admin/menu.scala.html
+++ b/app/views/admin/menu.scala.html
@@ -5,8 +5,9 @@
     <div class="uk-panel uk-panel-box">
         <h3 class="uk-panel-title">Admin setting</h3>
         <ul class="uk-nav uk-nav-side">
-            <li><a href="@admin.routes.Team.listTeam()">Team</a></li>
             <li><a href="@admin.routes.Criteria.listCriteria()">Criteria</a></li>
+            <li><a href="@admin.routes.UserType.edit()">User Type</a></li>
+            <li><a href="@admin.routes.Team.listTeam()">Team</a></li>
             <li><a href="@admin.routes.Setting.setting()">On/Off Feature</a></li>
             <li><a onclick="setupFeatures()">Setup Features And Reset</a></li>
         </ul>
