--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -1,4 +1,4 @@
-@(message: String)(team: String)(teamList: Boolean)(uploadLogo: Boolean)
+@(message: String)(team: String)(teamList: Boolean)(uploadLogo: Boolean)(dateTime: String)
 
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
@@ -11,7 +11,7 @@
             <div class="uk-panel uk-panel-box uk-text-center" style="border-color: inherit ;background: #ffffff; color: #000000; font-size: 400%">
                 <div id="clock"></div>
                 <script>
-                $ ( '#clock' ).countdown ( "2015/03/10 00:00:00", function ( event ) {
+                $ ( '#clock' ).countdown ( "@dateTime", function ( event ) {
                 var totalHours = event.offset.totalDays * 24 + event.offset.hours ;
                 $ ( this ).html ( event.strftime ( totalHours + ' : %M : %S') ) ;
                 } ) ;
